Imported Debian patch 1.0.0-2

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: unbound
 Section: net
 Priority: optional
 Maintainer: Robert S. Edmonds <edmonds@debian.org>
-Build-Depends: dpkg-dev (>= 1.14.9), debhelper (>= 7), autotools-dev, libldns-dev, libssl-dev
+Build-Depends: dpkg-dev (>= 1.14.9), debhelper (>= 7), quilt, doxygen,
+ autoconf, libtool, automake, libldns-dev, libssl-dev
 Standards-Version: 3.7.3
 
 Package: unbound
@@ -17,6 +18,17 @@ Description: validating, recursive, caching DNS resolver
  .
  Unbound implements a number of security features, including chrooting and
  privilege dropping. The Debian init script will populate a chroot by default.
+ .
+ This package contains the unbound daemon.
+
+Package: unbound-host
+Architecture: any
+Depends: ${shlibs:Depends}
+Description: reimplementation of the 'host' command
+ This package provides the 'unbound-host' program that is bundled with the
+ Unbound domain name server. This version differs from the one provided in the
+ package called host, which is from NIKHEF, and bind9-host, which is from ISC,
+ and has a similar but different set of features/options.
 
 Package: libunbound0
 Architecture: any
