--- a/debian/rules
+++ b/debian/rules
@@ -12,7 +12,7 @@ build-stamp:
 	aclocal
 	autoheader
 	autoconf
-	dh_auto_configure
+	dh_auto_configure -- --disable-rpath
 	dh_auto_build
 	dh build --after test
 	touch $@
