Imported Debian patch 1.2.1-2

--- a/debian/control
+++ b/debian/control
@@ -2,15 +2,16 @@ Source: unbound
 Section: net
 Priority: optional
 Maintainer: Robert S. Edmonds <edmonds@debian.org>
-Build-Depends: dpkg-dev (>= 1.14.9), debhelper (>= 7), doxygen, autoconf,
- automake, libtool, flex, bison, libldns-dev, libssl-dev
-Standards-Version: 3.8.0.0
+Build-Depends: dpkg-dev (>= 1.14.9), debhelper (>= 7), quilt, doxygen,
+ autoconf, automake, autotools-dev, libtool, flex, bison, libldns-dev,
+ libssl-dev
+Standards-Version: 3.8.1
 Homepage: http://www.unbound.net/
 
 Package: unbound
 Section: net
 Architecture: any
-Depends: ${shlibs:Depends}, adduser
+Depends: ${misc:Depends}, ${shlibs:Depends}, adduser
 Description: validating, recursive, caching DNS resolver
  Unbound is a recursive-only caching DNS server which can perform DNSSEC
  validation of results. It implements only a minimal amount of authoritative
@@ -23,7 +24,7 @@ Description: validating, recursive, caching DNS resolver
 Package: unbound-host
 Section: net
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: reimplementation of the 'host' command
  This package provides the 'unbound-host' program that is bundled with the
  Unbound domain name server. This version differs from the one provided in the
@@ -33,7 +34,7 @@ Description: reimplementation of the 'host' command
 Package: libunbound0
 Section: net
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: library implementing DNS resolution and validation
  libunbound performs and validates DNS lookups; it can be used to convert
  hostnames to IP addresses and back and obtain other information from the
@@ -42,7 +43,7 @@ Description: library implementing DNS resolution and validation
 Package: libunbound-dev
 Section: libdevel
 Architecture: any
-Depends: libunbound0 (= ${binary:Version})
+Depends: ${misc:Depends}, libunbound0 (= ${binary:Version})
 Description: static library, header files, and docs for libunbound
  Static library, header files, and documentation for libunbound.
  .
