--- a/debian/rules
+++ b/debian/rules
@@ -23,7 +23,7 @@ clean: unpatch
 
 install: build
 	dh install --before dh_installinit
-	dh_installinit --error-handler=true
+	dh_installinit --error-handler=true --restart-after-upgrade
 	dh install --after dh_installinit
 	install -m 0644 doc/example.conf debian/unbound/etc/unbound/unbound.conf
 
