--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Robert S. Edmonds <edmonds@debian.org>
 Build-Depends: dpkg-dev (>= 1.14.9), debhelper (>= 7), quilt, doxygen,
  autoconf, automake, autotools-dev, libtool, flex, bison, libldns-dev,
- libssl-dev, libev-libevent-dev, python-all-dev (>= 2.5.4-1~),
+ libssl-dev, libev-libevent-dev, libexpat1-dev, python-all-dev (>= 2.5.4-1~),
  python-support (>= 1.0.0), swig
 Standards-Version: 3.8.4
 Homepage: http://www.unbound.net/
