debian/: remove quilt

--- a/debian/rules
+++ b/debian/rules
@@ -3,9 +3,7 @@
 %:
 	dh $@
 
-include /usr/share/quilt/quilt.make
-
-build: patch build-stamp
+build: build-stamp
 build-stamp:
 	dh build --before configure
 	dh_auto_configure -- \
@@ -18,7 +16,7 @@ build-stamp:
 	dh build --after test
 	touch $@
 
-clean: unpatch
+clean:
 	dh clean
 
 install: build
