debian/: install pyunbound files into python-unbound package

--- a/debian/rules
+++ b/debian/rules
@@ -26,6 +26,8 @@ install: build
 	dh_installinit --error-handler=true --restart-after-upgrade
 	dh install --after dh_installinit
 	install -m 0644 doc/example.conf debian/unbound/etc/unbound/unbound.conf
+	install -m 0644 debian/tmp/usr/lib/python2.6/dist-packages/_unbound.so.2.8.0 \
+		debian/python-unbound/usr/lib/pyshared/python2.6/_unbound.so
 	echo '$$named unbound' > debian/unbound/etc/insserv.conf.d/unbound
 
 binary-arch: install
