debian/control: set python-unbound XB-Python-Version to python2.6

--- a/debian/control
+++ b/debian/control
@@ -54,7 +54,7 @@ Package: python-unbound
 Section: python
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}
-XB-Python-Version: ${python:Versions}
+XB-Python-Version: python2.6
 Description: library implementing DNS resolution and validation (Python bindings)
  Python extension module for libunbound.
  .
