debian/unbound.conf: include unbound.conf.resolvconf

--- a/debian/unbound.conf
+++ b/debian/unbound.conf
@@ -13,6 +13,12 @@ include: "/etc/unbound/unbound.conf.local"
 # This file controls whether the root trust anchor is enabled or not.
 include: "/etc/unbound/unbound.conf.root-anchor"
 
+# If the resolvconf package is installed and RESOLVCONF_FORWARDERS is
+# enabled in /etc/default/unbound, this file will configure the
+# nameservers discovered by resolvconf (e.g. from DHCP or static entries
+# in /etc/network/interfaces) as forwarders.
+include: "/etc/unbound/unbound.conf.resolvconf"
+
 # The server clause sets the main parameters. 
 server:
 	# whitespace is not necessary, but looks cleaner.
