debian/control: add Vcs-Browser, Vcs-Git headers

--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,8 @@ Build-Depends: dpkg-dev (>= 1.14.9), debhelper (>= 7), doxygen,
 Standards-Version: 3.9.1
 Homepage: http://www.unbound.net/
 XS-Python-Version: all
+Vcs-Browser: http://git.debian.org/?p=users/edmonds/unbound.git
+Vcs-Git: git://git.debian.org/~edmonds/unbound.git
 
 Package: unbound
 Architecture: any
