doc/unbound.conf.5.in: document that control-enable defaults to "yes" now

--- a/doc/unbound.conf.5.in
+++ b/doc/unbound.conf.5.in
@@ -868,7 +868,7 @@ section for options.  To setup the correct self\-signed certificates use the
 \fIunbound\-control\-setup\fR(8) utility.
 .TP 5
 .B control\-enable:     \fI<yes or no>
-The option is used to enable remote control, default is "no".
+The option is used to enable remote control, default is "yes".
 If turned off, the server does not listen for control commands.
 .TP 5
 .B control\-interface: <ip address>
