debian/: multi-arch support

--- a/debian/control
+++ b/debian/control
@@ -2,11 +2,11 @@ Source: unbound
 Section: net
 Priority: optional
 Maintainer: Robert S. Edmonds <edmonds@debian.org>
-Build-Depends: dpkg-dev (>= 1.14.9), debhelper (>= 7), doxygen,
+Build-Depends: dpkg-dev (>= 1.14.9), debhelper (>= 8.1.3~), doxygen,
  autoconf, automake, autotools-dev, libtool, flex, bison, libldns-dev (>= 1.6.9-2~),
  libssl-dev, libev-libevent-dev, libexpat1-dev, python-all-dev (>= 2.5.4-1~),
  python-support (>= 1.0.0), swig
-Standards-Version: 3.9.1
+Standards-Version: 3.9.2
 Homepage: http://www.unbound.net/
 XS-Python-Version: all
 Vcs-Browser: http://git.debian.org/?p=users/edmonds/unbound.git
@@ -47,6 +47,8 @@ Description: reimplementation of the 'host' command
 Package: libunbound2
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Pre-Depends: ${misc:Pre-Depends}
+Multi-Arch: same
 Description: library implementing DNS resolution and validation
  libunbound performs and validates DNS lookups; it can be used to convert
  hostnames to IP addresses and back and obtain other information from the
@@ -56,6 +58,7 @@ Package: libunbound-dev
 Section: libdevel
 Architecture: any
 Depends: ${misc:Depends}, libunbound2 (= ${binary:Version})
+Multi-Arch: same
 Description: static library, header files, and docs for libunbound
  Static library, header files, and documentation for libunbound.
  .
