--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,9 @@
 #!/usr/bin/make -f
 #export DH_VERBOSE=1
+
+DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
+LIBRARY = libunbound2
+
 %:
 	dh $@
 
@@ -11,7 +15,8 @@ build-stamp:
 		--with-pidfile=/var/run/unbound.pid \
 		--with-libevent \
 		--with-pythonmodule \
-		--with-pyunbound
+		--with-pyunbound \
+		--libdir=/usr/lib/$(DEB_HOST_MULTIARCH)
 	dh_auto_build
 	dh build --after test
 	touch $@
@@ -26,6 +31,18 @@ install: build
 	echo '$$named unbound' > debian/unbound/etc/insserv.conf.d/unbound
 	install -m 0755 debian/resolvconf debian/unbound/etc/resolvconf/update.d/unbound
 	install -m 0644 doc/example.conf debian/unbound/usr/share/doc/unbound/examples/unbound.conf
+
+	mkdir -p debian/libunbound-dev/usr/lib/$(DEB_HOST_MULTIARCH)
+	mv \
+		debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/libunbound.a \
+		debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/libunbound.so \
+		debian/libunbound-dev/usr/lib/$(DEB_HOST_MULTIARCH)
+
+	mkdir -p debian/$(LIBRARY)/usr/lib/$(DEB_HOST_MULTIARCH)
+	mv \
+		debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/*.so.* \
+		debian/$(LIBRARY)/usr/lib/$(DEB_HOST_MULTIARCH)
+	chmod 0644 debian/$(LIBRARY)/usr/lib/$(DEB_HOST_MULTIARCH)/*
 
 	# XXX gross hack to prevent python module from linking against everything
 	rm -f _unbound.la
