Imported Upstream version 1.0.1

--- a/doc/unbound-checkconf.8.in
+++ b/doc/unbound-checkconf.8.in
@@ -1,4 +1,4 @@
-.TH "unbound-checkconf" "8" "May 20, 2008" "NLnet Labs" "unbound 1.0.0"
+.TH "unbound-checkconf" "8" "Jul 16, 2008" "NLnet Labs" "unbound 1.0.1"
 .\"
 .\" unbound-checkconf.8 -- unbound configuration checker manual
 .\"
@@ -36,7 +36,7 @@ The unbound-checkconf program exits with status code 1 on error,
 0 for a correct config file.
 .SH "FILES"
 .TP
-.I /usr/local/etc/unbound/unbound.conf
+.I @ub_conf_file@
 unbound configuration file.
 .SH "SEE ALSO"
 \fIunbound.conf\fR(5), 
