Imported Upstream version 1.0.2

--- a/doc/unbound.conf.5.in
+++ b/doc/unbound.conf.5.in
@@ -1,4 +1,4 @@
-.TH "unbound.conf" "5" "Jul 16, 2008" "NLnet Labs" "unbound 1.0.1"
+.TH "unbound.conf" "5" "Aug  7, 2008" "NLnet Labs" "unbound 1.0.2"
 .\"
 .\" unbound.conf.5 -- unbound.conf manual
 .\"
@@ -50,6 +50,10 @@ example.conf file with all the options.
 server:
 	directory: "/etc/unbound"
 	username: unbound 	# make sure it can write to pidfile.
+	# make sure unbound can access entropy from inside the chroot.
+	# e.g. on linux the use these commands (on BSD, devfs(8) is used):
+	#      mount --bind -n /dev/random /etc/unbound/dev/random
+	# and  mount --bind -n /dev/log /etc/unbound/dev/log
 	chroot: "/etc/unbound"
 	# logfile: "/etc/unbound/unbound.log"  #uncomment to use logfile.
 	pidfile: "/etc/unbound/unbound.pid"
@@ -258,7 +262,7 @@ If given a chroot is done to the given directory. The default is
 .TP
 .B username: \fI<name>
 If given, after binding the port the user privileges are dropped. Default is
-"unbound". If you give username: "" no user change is performed. 
+"@UNBOUND_USERNAME@". If you give username: "" no user change is performed. 
 .IP
 If this user is not capable of binding the
 port, reloads (by signal HUP) will still retain the opened ports.
