--- a/debian/rules
+++ b/debian/rules
@@ -78,7 +78,7 @@ binary-arch: build
 	dh_installchangelogs
 	dh_installdocs
 	dh_installman
-	dh_python2
+	dh_python2 --no-guessing-versions
 	dh_strip
 	dh_compress
 	dh_fixperms
