--- a/debian/rules
+++ b/debian/rules
@@ -29,7 +29,8 @@ binary-arch: build
 		--with-pidfile=/var/run/unbound.pid \
 		--with-libevent \
 		--with-pythonmodule \
-		--with-pyunbound
+		--with-pyunbound \
+		--disable-ecdsa
 	$(MAKE) unbound
 	install -D -m 0755 unbound debian/unbound/usr/sbin/unbound
 
@@ -54,6 +55,7 @@ binary-arch: build
 		--without-libevent \
 		--without-pythonmodule \
 		--without-pyunbound \
+		--disable-ecdsa \
 		--libdir=/usr/lib/$(DEB_HOST_MULTIARCH)
 
 	$(MAKE)
