pointing to correct unbound.conf reference file

--- a/debian/unbound.conf
+++ b/debian/unbound.conf
@@ -2,7 +2,7 @@
 #
 # See the unbound.conf(5) man page.
 #
-# See /usr/share/doc/unbound/examples/unbound.conf for a commented
+# See /usr/share/doc/unbound/examples/unbound.conf.gz for a commented
 # reference config file.
 
 server:
